<resources>
    <string name="app_name">Home Jungle</string>
    <string name="title_your_plants">Your plants</string>
    <string name="title_future_plants">Future plants</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_database">Database</string>
    <string name="title_list_database">Plants</string>
    <string name="title_marketplace">Marketplace</string>
    <string name="title_giveaways">Give-aways</string>

    <string name="tv_username">username</string>
    <string name="tv_contact">contact</string>

    <string name="no_giveaways">You have no giveaways</string>
    <string name="no_nearby_plant">There are no plants in your neighborhood</string>

    <string name="no_plants">You have no plants</string>
    <string name="no_future_plants">You have no plants</string>
    <string name="no_events">You have no tasks in your planner</string>

    <string name="add_btn">Add</string>

    <string name="add_pop_up">Add a plant</string>
    <string name="add_futureplant_pop_up">Add a plant in future</string>
    <string name="add_description_pop_up">Please add a description for this plant:</string>
    <string name="add_destination_pop_up">Add plant to:</string>
    <string name="add_image_pop_up">Choose an image for your giveaway:</string>
    <string name="toast_your_plants">Added to your plants</string>
    <string name="toast_future_plants">Added to future plants</string>
    <string name="toast_add_giveaway">Added to Marketplace</string>
    <string name="description_edittext">Description</string>
    <string name="snack_bar_text">Plant deleted</string>
    <string name="snack_bar_undo">Undo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_error_message_marketplace">Home Jungle was not able to determine your location to show nearby give-aways.</string>

    <!-- plantpages -->
    <string name="wateramount">water</string>
    <string name="sunamount">sun</string>
    <string name="careamount">care</string>
</resources>