<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_plants" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_database"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_database" />

    <item
        android:id="@+id/navigation_marketplace"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_marketplace" />

    <item
        android:id="@+id/navigation_giveaways"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_giveaways" />

</menu>