<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="se.bth.homejungle.ui.plants.PlantFragment"
        android:label="@string/title_plants"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_database"
        android:name="se.bth.homejungle.ui.database.DatabaseFragment"
        android:label="@string/title_database"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="se.bth.homejungle.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_giveaways"
        android:name="se.bth.homejungle.ui.giveaways.GiveawaysFragment"
        android:label="@string/title_giveaways"
        tools:layout="@layout/fragment_giveaways" />
    <fragment
        android:id="@+id/navigation_marketplace"
        android:name="se.bth.homejungle.ui.marketplace.Marketplace"
        android:label="@string/title_marketplace"
        tools:layout="@layout/fragment_marketplace" />
</navigation>