<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.plants.singleplant.PlantInfoFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/water3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_drop"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/water2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/water2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_drop"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/water1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/water4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_drop"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/water3"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/water1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_drop"
            android:visibility="visible"
            app:layout_constraintStart_toEndOf="@+id/waterAmount"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/waterAmount"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="30dp"
            android:text="@string/wateramount"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/sunlightAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="30dp"
            android:text="@string/sunamount"
            app:layout_constraintBottom_toTopOf="@+id/careAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/water1" />

        <TextView
            android:id="@+id/careAmount"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="43dp"
            android:text="@string/careamount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sunlightAmount" />

        <TextView
            android:id="@+id/moreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="50dp"
            android:text="more:"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/careAmount" />

        <TextView
            android:id="@+id/moreInformation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="46dp"
            android:text="TextView"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreTitle" />


        <ImageView
            android:id="@+id/sun1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_sun"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/water1"
            app:layout_constraintTop_toBottomOf="@+id/water1" />

        <ImageView
            android:id="@+id/sun2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_sun"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/sun1"
            app:layout_constraintTop_toBottomOf="@+id/water1" />

        <ImageView
            android:id="@+id/sun3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_sun"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/sun2"
            app:layout_constraintTop_toBottomOf="@+id/water1" />

        <ImageView
            android:id="@+id/sun4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_sun"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/sun3"
            app:layout_constraintTop_toBottomOf="@+id/water1" />


        <ImageView
            android:id="@+id/heart1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@drawable/heart"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/sun1"
            app:layout_constraintTop_toBottomOf="@+id/sun1" />

        <ImageView
            android:id="@+id/heart2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/heart"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/heart1"
            app:layout_constraintTop_toBottomOf="@+id/sun1" />

        <ImageView
            android:id="@+id/heart3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/heart"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/heart2"
            app:layout_constraintTop_toBottomOf="@+id/sun1" />

        <ImageView
            android:id="@+id/heart4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/heart"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/heart3"
            app:layout_constraintTop_toBottomOf="@+id/sun1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
